Changed the ESV-HTML-Layout to flexbox. [NRRPLT-1337] Solves the problem with the scrollbars. [NRRPLT-1372] Put the Toolbar to the bottom.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -111,10 +111,7 @@ canvas {
 }
 
 .esv-overlay {
-    position: absolute;
-    top: 50px;
-    left: 0px;
-    width: 100%
+  width: 100%
 }
 .esv-contextmenu {
     position: absolute;
